refactor: use primitive boolean, use immutable lists